# etdmap

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  config_test_template.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  test.html  testing.md
.github/workflows/: deploy.yml
_modules/: index.html
_modules/etdmap/: data_model.html  dataset_validators.html  index_helpers.html  mapping_clock_helpers.html  mapping_helpers.html  record_validators.html
_sources/: index.rst.txt  readme.rst.txt
_sources/source/: modules.rst.txt
docs/: build.bat  conf.py  index.rst  test.rst  testing.md
etdmap/: .pre-commit-config.yaml  __init__.py  _config.py  data_model.py  dataset_validators.py  index_helpers.py  mapping_clock_helpers.py  mapping_helpers.py  pytest.ini  record_validators.py
etdmap/data/: etdmodel.csv  thresholds.csv
source/: etdmap.html  etdmap.rst  modules.html
tests/: conftest.py  test_data_model.py  test_dataset_validators.py  test_helpers.py  test_index_helpers.py  test_raw_data.py  test_record_validators.py
tests/data/: metadata_household_10_table.json  metadata_household_1_table.json  metadata_household_2_table.json  metadata_household_3_table.json  metadata_household_4_table.json  metadata_household_5_table.json  metadata_household_6_table.json  metadata_household_7_table.json  metadata_household_8_table.json  metadata_household_9_table.json  metadata_index.json
