[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etdmap"
version = "0.1.0"
description = "Mapping helper functions for EnergieTransitieDataset."
readme = "README.md"
authors = [{ name = "Nicolas Dickinson", email = "dickinson@washnote.com"}]
maintainers = [
    {name = "Nicolas Dickinson", email = "dickinson@washnote.com"},
    {name = 'Petra Izeboud', email = 'petra.izeboud@live.nl'},
    ]
requires-python = ">= 3.9"
dependencies = [
    "pandas>=2.2",
]
keywords = ["stroomversnelling", "energietransitie", "warmtepomp"]


[project.urls]
repository = "https://github.com/Stroomversnelling/etdmap"

[project.optional-dependencies]
ruffing = ["ruff"]
pytesting = ["pytest>=7"]
dev = ["pre-commit", "toml"]

[tool.ruff]
lint.extend-select = ["I"]
show-fixes = true
fix = true

[tool.flake8]
max-line-length = 88
exclude = ["build", "dist", "__pycache__"]


